--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         android:text="@string/sign_in"
         android:layout_marginStart="100dp"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
         android:layout_below="@id/password"
         android:layout_alignParentStart="true"
 
@@ -71,6 +72,7 @@
         />
     <Button
         android:id="@+id/sign_up"
+        android:layout_marginStart="10dp"
         android:layout_width="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_height="wrap_content"
