--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
         android:ems="10"
         android:text="@string/login"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/email"
@@ -23,7 +23,8 @@
         android:ems="10"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="250dp"
-        android:hint="Email" />
+        android:hint="@string/email"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:ems="10"
@@ -32,32 +33,90 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/email"
-        android:hint="Password" />
+        android:hint="@string/password" />
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/password"
+        android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:ems="10"
-        android:text="          ------------or-----------"
-        android:textSize="20dp" />
+        android:text="@string/or"
+        android:gravity="center"
+        android:textSize="20sp" />
+    <Button
+        android:id="@+id/sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_in"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_below="@id/password"
+        android:layout_alignParentStart="true"
+
+        />
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:text="@string/forgot_password"
+        android:textSize="12sp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/password"
+        android:layout_alignParentEnd="true"
+
+        />
+    <Button
+        android:id="@+id/sign_up"
+        android:layout_marginStart="10dp"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/password"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="100dp"
+        android:text="@string/sign_up" />
     <Button
         android:id="@+id/loginG"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="300dp"
         android:ems="10"
         android:gravity="center"
         android:drawableStart="@drawable/ic_google_logo"
+        android:layout_below="@id/text"
         android:text="@string/login_with_google"
         android:background="@drawable/round_bg"
         android:layout_marginLeft="26dp"
         android:layout_marginRight="26dp"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
+    <Button
+        android:visibility="invisible"
+        android:id="@+id/logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:gravity="center"
+        android:text="@string/logout"
+        android:background="@drawable/round_bg"
+        android:layout_marginLeft="26dp"
+        android:layout_marginRight="26dp"
+        android:textSize="20sp" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:id="@+id/progress_circular"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/login"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content" />
 
 
 </RelativeLayout>
