--- a/app/src/main/res/layout/activity_after_buy.xml
+++ b/app/src/main/res/layout/activity_after_buy.xml
@@ -141,5 +141,12 @@
             android:onClick="proceedTOPay"
             android:textColor="@android:color/background_light"
             android:textSize="30sp" />
+        <Button
+            android:text="LOGOUT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="36dp"
+            android:id="@+id/button1" />
     </RelativeLayout>
 </LinearLayout>
